@@ -2,7 +2,9 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.1 ----------
 
-[w2l] Partial support for the new list formatting of ODT 1.2 (implemented in OOo 3.0)
+[w2l] Bugfix: Continued numbering now works correctly for lists that continue at level>1
+
+[w2l] Added support for the new list formatting of ODT 1.2 (implemented in OOo 3.0)
 
 [all] Filter: Filters out characters that are illegal in xml
   (this fixes a problem with rtf documents imported in OOo)
